--- a/.github/workflows/ci-project.yml
+++ b/.github/workflows/ci-project.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: ci-project.yml
 
 on:
   push:
@@ -10,13 +7,12 @@ on:
     branches: ["master"]
 
 jobs:
-  build:
+  build-angular:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v3
@@ -27,4 +23,11 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-    # - run: npm test
+
+  build-docker-image:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
